--- a/estilos.css
+++ b/estilos.css
@@ -7,9 +7,43 @@
     src: url(fonts/Neon.ttf);
     
 }
+@keyframes blink {
+    78% {
+    color: inherit;
+    text-shadow: inherit;
+    }
+    79%{
+    color: #333;
+    }
+    80% {
+    text-shadow: none;
+    }
+    81% {
+    color: inherit;
+    text-shadow: inherit;
+    }
+    82% {
+    color: #333;
+    text-shadow: none;
+    }
+    83% {
+    color: inherit;
+    text-shadow: inherit;
+    }
+    92% {
+    color: #333;
+    text-shadow: none;
+    }
+    92.5% {
+    color: inherit;
+    text-shadow: inherit;
+    }
+}
+
+
 
 *{
-    margin: 0;
+    margin: 10px;
     padding: 0;
     box-sizing: border-box;
 }
@@ -46,18 +80,27 @@ body{
     background-image: url(imagenesproyecto/pared.jpg);
     z-index: 10;
 }
+a:hover{
+    text-decoration: none;
+    color: #fff;
+
+}
 
 header h1{
+    margin-top: 100px;
     text-align: center;
     text-transform: capitalize;
     font-size: 150px;
     width: auto;
-    color: rgb(255, 255, 255);
     text-shadow:var(--neonpink--color);
     font-family: neon;
 }
 header h1 a{
     text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+header span{ 
+    animation: blink linear infinite 1.5s;
 }
 @media only screen and (max-width: 479px){
     header h1{
@@ -126,102 +169,66 @@ section{
 }
 
 .burgersind{
-    min-height: 300px;
-    width: 100%;
-    display: grid;
     padding: 20px;
     gap: 10px;
 }
+.carousel-inner img {
+    width: 50%;
+    height: 50%;
+    border-radius: 40px;
+    border-color: transparent;
+}
 
-.burgersindimg {
-    border: 2px solid #000;
-    border-radius:7px ;
-    box-shadow:0 0 5px #333 ;
+.carousel-caption {
+    top:0;
+    bottom:auto;
+}
+
+.neoncarousel{
     font-size: 50px;
     color: rgb(255, 255, 255);
     text-shadow:var(--neonskyblue--color);
     font-family: neonDos;
 }
-.burgerimg:hover{
-    transform: scale(1.05);
-    transition: all 0.7s;
+
+.burgersindimg {
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+    text-shadow:var(--neonskyblue--color);
+    font-family: neonDos;
 }
 .burgerind1{
-    background-image: url(burgers/vegan.jpg);
-    background-position: center;
     background-size: cover;
+    width: 1000px;
+    height: 500px;
 }
 .burgerind2{
-    background-image: url(burgers/vegan.jpg);
-    background-position: center;
     background-size: cover;
+    width: 1000px;
+    height: 500px;
 }
 
 .burgerind3{
-    background-image: url(burgers/vegan.jpg);
-    background-position: center;
     background-size: cover;
+    width: 1000px;
+    height: 500px;
 }
 
 .burgerind4{
-    background-image: url(burgers/vegan.jpg);
-    background-position: center;
     background-size: cover;
+    width: 1000px;
+    height: 500px;
 }
 
 .burgerind5{
-    background-image: url(burgers/vegan.jpg);
-    background-position: center;
     background-size: cover;
+    width: 1000px;
+    height: 500px;
 }
 .burgersindimg{
     height: 380px;
 }
-@media only screen and (min-width:280px)and(max-width:479px){
-    .burgersindimg{
-        grid-template-columns: 1fr ;
-    }
-}
 
-
-@media only screen and (min-width: 480px) and (max-width:768px){
-    .burgersindimg{
-        grid-template-columns: 1fr ;
-    }
-}
-@media only screen and (min-width: 768px) and (max-width:1023px){
-    .burgersindimg{
-        grid-template-columns: 1fr 1fr;
-    }
-    .burgerind5{
-        grid-column: 1/3;
-    }
-}
-
-@media only screen and (min-width: 1024px){
-    .burgersind{
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-    .burgerind1{
-        grid-column: 1/1;
-    }
-
-    .burgerind2{
-        grid-column: 2/2;
-    }
-        
-    .burgerind3{
-        grid-column: 3/3;
-    }
-
-    .burgerind4{
-        grid-column: 4/4;
-    }
-
-    .burgerind5{
-        grid-column: 5/5;
-    }
-}
 
 .neon{
     color: rgb(255, 255, 255);
@@ -233,6 +240,16 @@ section{
     text-shadow:var(--neonskyblue--color);
     font-family: neonDos;
 }
+.neoncarouselb{
+    opacity: 0;
+    color: rgb(255, 255, 255);
+    text-shadow:var(--neonskyblue--color);
+    font-family: neonDos;
+    font-size: 50px;
+}
+
+
+
 .beers{
     min-height: 100%;
     width: 100%;
@@ -240,23 +257,18 @@ section{
     gap: 30px;
 }
 
-.beerindimg1 {
-    background-image: url(/STRANGE/amigosdelpino.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 800px;
+.carouselimgind:hover img{
+    opacity: 0.3;
+}   
+.carouselimgind:hover .neoncarouselb{
+    opacity: 1;
+    top: 50%;
+    left: 50%;
 }
-
-
-.beerindimg2 {
-    background-image: url(/STRANGE/amigosdelpino.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:contain;
-    height: 800px;
+.carouselimgind img{
+    width: 580px;
+    height: 580px;
 }
-
 @media only screen and (min-width: 280px){
     #antind{
     font-size: 50px;
@@ -273,10 +285,8 @@ section{
     .beers{
         grid-template-columns: 1fr 1fr;
     }
-    .beersindimg {
-        min-width: 200px;
-        min-height:600px;
-    }
+
+    
     .beerlogoind1{
         grid-column: 1/1;
         grid-row: 1/4;
@@ -342,31 +352,31 @@ section{
     font-family: neonDos;
 }
 .burgermenu1{
-    background-image: url(burgers/vegan.jpg);
+    background-image: url(imagenesproyecto/chicken.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
 }
 .burgermenu2{
-    background-image: url(burgers/vegan.jpg);
+    background-image: url(imagenesproyecto/classic.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
 }
 .burgermenu3{
-    background-image: url(burgers/vegan.jpg);
+    background-image: url(imagenesproyecto/rustik.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
 }
 .burgermenu4{
-    background-image: url(burgers/vegan.jpg);
+    background-image: url(imagenesproyecto/vegancheese.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
 }
 .burgermenu5{
-    background-image: url(burgers/vegan.jpg);
+    background-image: url(imagenesproyecto/vegan.jpg);
     background-position: center;
     background-size: cover;
     height: 300px;
@@ -514,13 +524,12 @@ section{
 .columnbirra{
     display: flex;
     align-items: center;
-
 }
 
 .columnbirra img {
     vertical-align: middle;
-    max-width: 20%;
-    max-height: 20%;
+    max-width: 15%;
+    max-height: 15%;
 
 }
 .preciosbirra{
