--- a/estilos.css
+++ b/estilos.css
@@ -47,7 +47,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.neon{
+    color: rgb(255, 255, 255);
+    text-shadow:var(--neonpink--color);
+    font-family: neonDos;
+}
+.neon:hover{
+    color: rgb(255, 255, 255);
+    text-shadow:var(--neonskyblue--color);
+    font-family: neonDos;
+}
 
 :root{
     --neonpink--color:        
@@ -85,7 +94,7 @@ a:hover{
     color: #fff;
 
 }
-
+/* Empieza Logo */
 header h1{
     margin-top: 100px;
     text-align: center;
@@ -102,11 +111,7 @@ header h1 a{
 header span{ 
     animation: blink linear infinite 1.5s;
 }
-strong{
-    color:rgb(255, 255, 255) ;
-    font-size: 50px;
-    letter-spacing: 0.3em ;
-}
+
 @media only screen and(min-width:200px) and (max-width:478px){
     header h1{
         font-size: 50px;
@@ -123,6 +128,9 @@ strong{
         font-size: 30px;
     }
 }
+/* Termina Logo */
+
+/* Empieza Nav */
 header ul li{
     list-style: none;
     display: inline-block;
@@ -149,9 +157,11 @@ header ul li :hover ul{
     padding-top: 50px;
 }
 .menu{
+    color:rgb(255, 255, 255) ;
+    font-size: 50px;
+    letter-spacing: 0.3em ;
     text-align: center;
     text-decoration: none;
-    color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
     padding-left:10px ;
@@ -168,12 +178,20 @@ header .menu :hover{
     text-shadow:var(--neonpinktwo--color);
 }
 
+header .menu:active{
+    text-shadow: var(--neongreen--color);
+
+}
+/* Termina Nav */
+
 
 section{
     margin-bottom: 10px;
     width: 100%;
     text-align: center;
 }
+
+/* Carousel index Hamburguesas  y Cervezas */
 
 .burgersind{
     padding: 20px;
@@ -229,6 +247,7 @@ section{
     }
 }
 
+
 .carousel-caption {
     top:0;
     bottom:auto;
@@ -248,16 +267,7 @@ section{
     font-family: neonDos;
 }
 
-.neon{
-    color: rgb(255, 255, 255);
-    text-shadow:var(--neonpink--color);
-    font-family: neonDos;
-}
-.neon:hover{
-    color: rgb(255, 255, 255);
-    text-shadow:var(--neonskyblue--color);
-    font-family: neonDos;
-}
+
 .neoncarouselb{
     opacity: 0;
     color: rgb(255, 255, 255);
@@ -319,15 +329,10 @@ section{
         grid-column: 2/2;
         grid-row: 1/4;
     }  
-    .beerindimg1{
-        grid-column: 1/1;
-        grid-row: 4/4;
-    }
-    .beerindimg2{
-        grid-column: 2/2;
-        grid-row: 4/4;
-    }
 }
+/* Termina carouseles index hamburguesas y cervezas */
+
+/* Empieza Localizacion Horario y Mapa */
 .locate{
     flex-direction: column;
     display: flex;
@@ -351,18 +356,27 @@ section{
     font-size: 50px;
     margin: 5%;
 }
+/* Termina Localizacion Horario Y Mapa */
 
+
+/*Empieza Menu */
 #menuneon{
     text-align: center;
     font-size: 80px;
     margin-bottom: 10%;
 }
-
+/* Empieza Hamburguesas */
 .burgermenu{
     width: 100%;
     display: grid;
     min-height: 300px;
 }   
+.nombreh{
+    font-size: 45px;
+    color: #fff;
+    text-shadow: var(--neonskyblue--color);
+    font-family: neondos;
+}
 .burgersmenuimg{
     display: grid;
     border: 2px solid #000;
@@ -402,25 +416,18 @@ section{
     background-size: cover;
     height: 300px;
 }
-.nombreh{
-    font-size: 45px;
+.ingredientes{
     color: #fff;
-    text-shadow: var(--neonskyblue--color);
+    font-size: 40px;
+    text-shadow: var(--neongreen--color);
     font-family: neondos;
 }
-
 
 @media only screen and (min-width:280px)and(max-width:479px){
     .burgersmenu1{
         grid-template-columns: 1fr;
     }
-
-
 }
-
-
-
-
 
 @media only screen and (min-width: 580px){
     .burgersmenu1{
@@ -487,43 +494,8 @@ section{
         grid-row: 1/4;
     }
 }
-.ingredientes{
-    color: #fff;
-    font-size: 40px;
-    text-shadow: var(--neongreen--color);
-    font-family: neondos;
-}
-
-
-@media only screen and (min-width: 480px) and (max-width:768px){
-    .guarnicion{
-        grid-template-columns: 1fr;
-    }
-    .guar{
-        max-height: 300px;
-    }
-    
-}
-
-@media only screen and (min-width: 768px) and (max-width:1023px){
-    .guarnicion{
-        grid-template-columns:1fr 1fr 1fr;
-    }
-    .guar{
-        max-height: 300px;
-    }
-    
-}
-
-@media only screen and (min-width:1023px) {
-    .guarnicion{
-        grid-template-columns:1fr 1fr 1fr;
-    }
-    .guar{
-        max-height: 300px;
-    }
-    
-}
+/* Termina Hamburguesas */
+/*Empieza Guarniciones */
 .guarnicionneon{
     text-align: center;
     font-size: 80px;
@@ -548,6 +520,42 @@ section{
     text-shadow: var(--neonskyblue--color);
     margin-bottom: 10%;
 }
+
+@media only screen and (min-width: 480px) and (max-width:768px){
+    .guarnicion{
+        grid-template-columns: 1fr;
+    }
+    .guar{
+        max-height: 300px;
+        padding: 10px;
+    }
+    
+}
+
+@media only screen and (min-width: 768px) and (max-width:1023px){
+    .guarnicion{
+        grid-template-columns:1fr 1fr 1fr;
+    }
+    .guar{
+        max-height: 300px;
+
+    }
+    
+}
+
+@media only screen and (min-width:1023px) {
+    .guarnicion{
+        grid-template-columns:1fr 1fr 1fr;
+    }
+    .guar{
+        max-height: 300px;
+    }
+    
+}
+/* Termina Guarnicion */
+/* Termina Menu*/
+
+/*Empieza Birras */
 .birrasneon{
     text-align: center;
     font-size: 80px;
@@ -572,6 +580,28 @@ section{
     color: #fff;
     text-align: center;
 }
+
+/*Termina Birras */
+
+/* Empieza Nosotros */
+
+.fotonosotros {
+    margin: 5%;
+    width: 100%;
+    height: 500px;
+    max-height: 50%;
+    border: #000;
+    border-radius: 10%;
+}
+.texto{
+    font-family:'Lucilda sans';
+    color:#fff;
+    text-align: center;
+    text-shadow: var(--neonskyblue--color);
+    font-size: 30px;
+    margin: 5%;
+}
+
 #reserva{
     text-align: center;
     font-size: 80px;
@@ -608,25 +638,6 @@ label+input {
     margin: 0 30% 0 4%;
 }
 
-
-.fotonosotros {
-    margin: 5%;
-    width: 100%;
-    height: 500px;
-    max-height: 50%;
-    border: #000;
-    border-radius: 10%;
-}
-.texto{
-    font-family:'Lucilda sans';
-    color:#fff;
-    text-align: center;
-    text-shadow: var(--neonskyblue--color);
-    font-size: 30px;
-    margin: 5%;
-}
-
-
 @media only screen and (min-width:200px) and (max-width:500px) {
     .fotonosotros {
         margin: 5%;
@@ -645,8 +656,9 @@ label+input {
     }
     
 }
+/*termina nosotros*/
 
-
+/*empieza footer todas las paginas */
 .subir{
     font-size: 50px;
     height: 70px;
@@ -688,4 +700,4 @@ footer #ig{
     text-shadow: var(--neonpink--color);
 }
 
-
+/*termina footer todas las paginas*/
