--- a/estilos.css
+++ b/estilos.css
@@ -443,7 +443,7 @@ section{
     }
     .burgermenu1{
         grid-column: 3/5;
-        grid-row: 1/4;
+        grid-row: 1/5;
     }
     .nombreh2{
         grid-column: 4/5;
@@ -455,7 +455,7 @@ section{
     }
     .burgermenu2{
         grid-column: 1/3;
-        grid-row: 1/4;
+        grid-row: 1/5;
     }
     .nombreh3{
         grid-column: 1/1;
@@ -467,7 +467,7 @@ section{
     }
     .burgermenu3{
         grid-column: 3/5;
-        grid-row: 1/4;
+        grid-row: 1/5;
     }
     .nombreh4{
         grid-column: 4/5;
@@ -511,7 +511,11 @@ section{
     width: 70%;
     flex-direction: row;
     padding-left: 10px;
-    border-radius: 20px;
+    border-radius: 20px; 
+    transition: transform .2s;
+}
+.guar:hover{
+    transform: scale(1.1);
 }
 .preciosguar{
     font-size: 30px;
@@ -572,6 +576,11 @@ section{
 .birrasbirra{
     max-width: 278px;
     max-height: 330px;
+    transition: transform .2s;
+}
+
+.birrasbirra:hover{
+    transform: scale(1.1);
 }
 .neonbirras{
     font-size: 25px;
@@ -592,6 +601,11 @@ section{
     max-height: 50%;
     border: #000;
     border-radius: 10%;
+    transition: transform .2s;
+}
+
+.fotonosotros:hover{
+    transform: scale(1.1);
 }
 .texto{
     font-family:'Lucilda sans';
